tests/sksl/errors/DuplicateOutput.glsl
### Compilation failed:

error: 1: out location=0, index=0 is reserved for sk_FragColor
1 error
